# ocptest

./: Makefile  README.md  ansible-collection-ocptest-build.spec  ansible-collection-ocptest.spec  galaxy.yml  setup.cfg
contrib/: ansible-lint.sh  docs.sh
playbooks/: get_ocp_image.yml
plugins/module_utils/: ocp_image_lib.py
plugins/module_utils/common/: utils.py
plugins/modules/: ocp_image.py
roles/get_ocp_image/: README.md
roles/get_ocp_image/defaults/: main.yml
roles/get_ocp_image/handlers/: main.yml
roles/get_ocp_image/meta/: main.yml
roles/get_ocp_image/molecule/default/: converge.yml
roles/get_ocp_image/tasks/: main.yml
roles/get_ocp_image/tests/: test.yml
roles/get_ocp_image/vars/: main.yml
scripts/: get_ocp_version.py
tests/integration/targets/: test_ocp_task.yml
tests/unit/plugins/modules/: test_common.py  test_ocp_image.py
