[metadata]
name = sshnaidm.ocptest
summary = Ansible collections for OCP(test)
description-file =
    README.md

author = Sagi Shnaidman (@sshnaidm)
author-email = einarum@gmail.com
home-page = https://github.com/sshnaidm/ocptest.git
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/sshnaidm/ocptest/ = README.md
    share/ansible/collections/ansible_collections/sshnaidm/ocptest/roles/ = roles/*
    share/ansible/collections/ansible_collections/sshnaidm/ocptest/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/sshnaidm/ocptest/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/sshnaidm/ocptest/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/sshnaidm/ocptest/docs/ = docs/*
    share/ansible/collections/ansible_collections/sshnaidm/ocptest/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
